# a93

./: CMakeLists.txt  native_addon.cc  package-lock.json  package.json  schema.sql  tsconfig.json  tsconfig.main.json  webpack.renderer.config.js
src/cpp/: FESolver.cpp  FESolver.h  SQLiteDataAccess.cpp  SQLiteDataAccess.h  SafetyEvaluator.cpp  SafetyEvaluator.h  SerialSimulator.cpp  SerialSimulator.h
src/electron/: main.ts  preload.ts  tsconfig.preload.json
src/renderer/: App.tsx  index.html  index.tsx  mockApi.ts  styles.css  window.d.ts
src/renderer/components/: PlaybackController.tsx  RemainingLifePanel.tsx  SafetyIndicator.tsx  SectionSelector.tsx  StrainDataPanel.tsx  StressCloudChart.tsx
src/renderer/utils/: color.ts
src/shared/: types.ts
